# rust-xmlsec

./: Cargo.toml
src/: c14n.rs  lib.rs
src/proto/: ds.rs
testdata/: base_signed.xml  peer.cert.pem  peer.key.pem  signed.xml  signed2.xml  signed_cryptopro.xml  signed_iata.xml  signed_xades.xml  to_sign.xml
