[package]
name = "rust-xmlsec"
version = "1.0.0"
edition = "2021"
authors = ["Q <q@as207960.net>"]
license = "MIT"
repository = "https://github.com/as207960/rust-xmlsec"
description = "Pure rust XMLSec implementation"
readme = "README.md"

[dependencies]
xml_serde = { git = "https://github.com/x87-va/xml-serde.git" }
xml-rs = "0.8"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
pretty_env_logger = "0.4"
base64 = "0.13"
openssl 			= { git = "http://github.com/x87-va/rust-openssl", branch = "master", package = "openssl" }
openssl-gost-engine	= { git = "https://vitaliy_lee@bitbucket.org/vitaliy_lee/openssl-gost-engine.git", branch = "master" }
