[package]
name = "rust-xmlsec"
version = "1.0.0"
edition = "2021"
authors = ["Q <q@as207960.net>"]
license = "MIT"
repository = "https://github.com/as207960/rust-xmlsec"
description = "Pure rust XMLSec implementation"
readme = "README.md"

[dependencies]
log 				= "0.4"
xml_serde 			= { git = "https://github.com/x87-va/xml-serde.git" }
xml-rs 				= "0.8"
regex 				= "1"
serde 				= "1.0"
serde_derive 		= "1.0"
base64 				= "0.13"
openssl 			= { git = "http://github.com/x87-va/rust-openssl", branch = "master", package = "openssl" }

[dev-dependencies]
openssl-gost-engine	= { git = "https://vitaliy_lee@bitbucket.org/vitaliy_lee/openssl-gost-engine.git", branch = "master" }
